# Helio

./: .gitignore  Cargo.toml  EXAMPLE_README.md  FEATURE_DATA_EXPORT_API.md  GBUFFER_PIPELINE_WORKFLOW.md  Notes.md  PERFORMANCE_OPTIMIZATION.md  README.md  build-wasm.ps1  build-wasm.sh  cargo_check.txt  check_output.txt  check_output2.txt  composed_shader_debug.wgsl  fix_water_api.sh  flake.nix  justfile  load_fbx_output.txt  pkeeM.json  sdf_demo_err.txt
crates/examples/: Cargo.toml  ao_aa_demo.rs  basic_rendering.rs  churn_benchmark.rs  corona_demo.rs  debug_shapes.rs  demo_portal.rs  editor_demo.rs  editor_demo_mini.rs  feature_complete.rs  feature_geometry.rs  feature_global_illumination.rs  feature_showcase.rs  feature_with_lighting.rs  forward_with_gi.rs  indoor_cathedral.rs  indoor_cathedral_decals.rs  indoor_cathedral_fxaa.rs  indoor_cathedral_fxaa_hlfs.rs  indoor_cathedral_hlfs.rs  indoor_cathedral_pp_volumes.rs  indoor_cathedral_water.rs  indoor_corridor.rs  indoor_room.rs  indoor_server_room.rs  light_benchmark.rs  lighting_showcase.rs  load_fbx.rs  load_fbx_embedded.rs  meshlet_cull_benchmark.rs  minimal_rendering.rs  oil_rig_night.rs  one_million_cubes.rs  outdoor_canyon.rs  outdoor_city.rs  outdoor_night.rs  outdoor_rocks.rs  outdoor_volcano.rs  planar_reflection_demo.rs  planet_voxel_demo.rs  (+33 more)
crates/examples/shaders/: radiant_iridescent.wgsl
crates/examples/voxel/: mesh_demo.rs  raymarch_demo.rs
crates/feature_complete_android/: Cargo.toml
crates/feature_complete_android/src/: lib.rs
crates/helio-android-demos/: AndroidManifest.xml  Cargo.toml
crates/helio-android-demos/src/: editor_demo_mini.rs  lib.rs
crates/helio-asset-compat/: Cargo.toml
crates/helio-asset-compat/src/: animation_system.rs  camera_converter.rs  lib.rs  light_converter.rs  material_converter.rs  mesh_converter.rs  scene_converter.rs  texture_loader.rs
crates/helio-bake/: Cargo.toml
crates/helio-bake/src/: bake.rs  cache.rs  config.rs  data.rs  inject.rs  lib.rs
crates/helio-core/: Cargo.toml
crates/helio-core/src/: acceleration.rs  bounds.rs  buffer.rs  camera.rs  error.rs  frame_graph.rs  gpu_resources.rs  lib.rs  material_types.rs  mesh.rs  render_context.rs  scene.rs  texture.rs  transform.rs  vertex.rs  viewport.rs
crates/helio-core/tests/: render_timing_snapshot.rs  wgsl_validation.rs
crates/helio-culling/: Cargo.toml
crates/helio-culling/src/: compute_culling.rs  frustum.rs  hierarchical_z.rs  lib.rs  occlusion.rs
crates/helio-feature-billboards/: Cargo.toml  build.rs
crates/helio-feature-billboards/shaders/: billboard.wgsl
crates/helio-feature-billboards/src/: lib.rs
crates/helio-feature-global-illumination/: Cargo.toml  README.md
crates/helio-feature-global-illumination/shaders/: gi_functions.wgsl  pbr_functions.wgsl  probe_update.wgsl  shadow_pass.wgsl  shadow_sampling.wgsl  surface_cache_pass.wgsl
crates/helio-feature-global-illumination/src/: lib.rs
crates/helio-feature-procedural-shadows/: Cargo.toml  build.rs
crates/helio-feature-procedural-shadows/shaders/: radiance_cascade_trace.wgsl  radiance_lookup.wgsl  shadow_functions.wgsl  shadow_pass.wgsl
crates/helio-feature-procedural-shadows/src/: lib.rs
crates/helio-lighting/: Cargo.toml
crates/helio-lighting/src/: clustered.rs  gi.rs  global_illumination.rs  ibl.rs  lib.rs  light_probe.rs  lighting_system.rs  lightmaps.rs  lights.rs  probes.rs  reflection_probe.rs  shadows.rs  volumetric.rs
crates/helio-material/: Cargo.toml
crates/helio-material/src/: lib.rs  material.rs  material_instance.rs  pbr.rs  shader.rs  shader_graph.rs
crates/helio-pass-debug-overlay/: Cargo.toml
crates/helio-pass-debug-overlay/shaders/: debug_overlay.wgsl
crates/helio-pass-debug-overlay/src/: lib.rs
crates/helio-pass-decal/: Cargo.toml
crates/helio-pass-decal/shaders/: decal_apply.wgsl  decal_collect.wgsl
crates/helio-pass-decal/src/: lib.rs
crates/helio-pass-depth-prepass/: Cargo.toml
crates/helio-pass-depth-prepass/shaders/: depth_prepass.wgsl
crates/helio-pass-depth-prepass/src/: lib.rs
crates/helio-pass-depth-prepass/tests/: crate_tests.rs  layout_tests.rs
crates/helio-pass-occlusion-cull/: Cargo.toml
crates/helio-pass-occlusion-cull/shaders/: occlusion_cull.wgsl
crates/helio-pass-occlusion-cull/src/: lib.rs
crates/helio-pass-occlusion-cull/tests/: hiz_query_tests.rs  occlusion_tests.rs
crates/helio-pass-perf-overlay/: Cargo.toml
crates/helio-pass-perf-overlay/shaders/: aggregate_tiles.wgsl  analyze_color_overdraw.wgsl  analyze_pass_overdraw.wgsl  blit_color.wgsl  compute_shader_cost.wgsl  profile_material.wgsl  visualize.wgsl
crates/helio-pass-perf-overlay/src/: analysis.rs  lib.rs  rendering.rs
crates/helio-pass-radiance-cascades/: Cargo.toml
crates/helio-pass-radiance-cascades/src/: lib.rs
crates/helio-pass-radiance-cascades/tests/: atlas_tests.rs  cascade_tests.rs
crates/helio-pass-sdf/: Cargo.toml
crates/helio-pass-sdf/shaders/: sdf.wgsl  sdf_classify.wgsl  sdf_evaluate.wgsl  sdf_evaluate_sparse.wgsl  sdf_ray_march.wgsl  sdf_ray_march_clipmap.wgsl  sdf_scroll.wgsl
crates/helio-pass-sdf/src/: brick.rs  clip_map.rs  edit_bvh.rs  edit_list.rs  gpu_bvh.rs  lib.rs  noise.rs  primitives.rs  rendering.rs  terrain.rs  uniforms.rs
crates/helio-pass-sdf/tests/: aabb_tests.rs  clip_map_tests.rs  edit_bvh_tests.rs  primitives_tests.rs  sdf_math_tests.rs  terrain_tests.rs
crates/helio-pass-shadow/: Cargo.toml
crates/helio-pass-shadow/shaders/: shadow.wgsl
crates/helio-pass-shadow/src/: lib.rs
crates/helio-pass-shadow/tests/: atlas_tests.rs  shadow_tests.rs
crates/helio-pass-simple-cube/: Cargo.toml
crates/helio-pass-simple-cube/shaders/: simple_cube.wgsl
crates/helio-pass-sky-lut/: Cargo.toml
crates/helio-pass-ssao/: Cargo.toml
crates/helio-pass-ssr/: Cargo.toml
crates/helio-pass-virtual-geometry/: Cargo.toml
crates/helio-render/: Cargo.toml
crates/helio-render-v2/: Cargo.toml
crates/helio-render-v3/: Cargo.toml
examples/: Cargo.toml  basic_rendering.rs  deferred_rendering.rs  full_demo.rs  particles.rs  pbr_materials.rs  shadows.rs
(+701 files in other folders)
