[workspace]
members = [
    "crates/helio-core",
    "crates/helio-render-v2",
    "crates/helio-live-portal",
    "crates/helio-asset-compat",

    "crates/examples",
    "crates/helio-wasm-app",
    "crates/helio-wasm-examples",
]
resolver = "2"

[workspace.dependencies]
blade-graphics = { git = "https://github.com/tristanpoland/blade", rev = "d85bd14a78ed7729abc298906e87332257674a02" }
blade-macros =   { git = "https://github.com/tristanpoland/blade", rev = "d85bd14a78ed7729abc298906e87332257674a02" }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
winit = "0.30.12"
env_logger = "0.11"
log = "0.4"

# SolidRS - 3D asset loading library
solid-rs =   { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-gltf = { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-fbx =  { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-obj =  { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-usd =  { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
