[package]
name = "helio-workspace"
version = "0.0.0"
edition = "2021"
publish = false
description = "Workspace root"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[workspace]
members = [
    "crates/*",
    "crates_other/*"
]
exclude = [
    "vendor/nebula",
    # Bake output, not a crate. Lands here when a demo is run with `crates/` as
    # the working directory, and the `crates/*` member glob would otherwise try
    # to read it as a workspace member and fail.
    "crates/bake_cache",
]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "30.0.0", default-features = true, features = ["vulkan", "metal", "dx12", "gles", "webgpu", "wgsl"] }
blade-graphics = { git = "https://github.com/tristanpoland/blade", rev = "d85bd14a78ed7729abc298906e87332257674a02" }
blade-macros =   { git = "https://github.com/tristanpoland/blade", rev = "d85bd14a78ed7729abc298906e87332257674a02" }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck"] }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }
env_logger = "0.11"
log = "0.4"

# SolidRS - 3D asset loading library
solid-rs =   { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-gltf = { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-fbx =  { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-obj =  { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
solid-usd =  { git = "https://github.com/Far-Beyond-Pulsar/Solid3D", rev = "c070e8ccb0324dbb0a0a5d11abd6c72f00afe291" }
quark = { git = "https://github.com/Far-Beyond-Pulsar/Quark", package = "quark" }
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
pollster = "0.4"
helio-core = { path = "crates/helio-core" }
helio-default-graphs = { path = "crates/helio-default-graphs"}
wasm-bindgen = "0.2"
helio-pass-taa = { path = "crates/helio-pass-taa" }
helio-pass-postprocess = { path = "crates/helio-pass-postprocess" }
helio-pass-volumetric-fog = { path = "crates/helio-pass-volumetric-fog" }
helio = { path = "crates/helio" }
libhelio = { path = "crates/libhelio" }
helio-asset-compat = { path = "crates/helio-asset-compat" }
helio-voxel-core = { path = "crates/helio-voxel-core" }
helio-planet-voxel-core = { path = "crates/helio-planet-voxel-core" }
helio-pass-planetary-voxel = { path = "crates/helio-pass-planetary-voxel" }
helio-pass-corona = { path = "crates/helio-pass-corona" }
helio-pass-decal = { path = "crates/helio-pass-decal" }
helio-pass-sdf = { path = "crates/helio-pass-sdf" }
helio-pass-voxel-mesh = { path = "crates/helio-pass-voxel-mesh" }
helio-pass-fxaa = { path = "crates/helio-pass-fxaa" }

[dependencies]
tiny_http = "0.12"
ratatui = "0.29"
crossterm = "0.28"
