[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "basic_rendering"
path = "basic_rendering.rs"

[[example]]
name = "deferred_rendering"
path = "deferred_rendering.rs"

[[example]]
name = "pbr_materials"
path = "pbr_materials.rs"

[[example]]
name = "shadows"
path = "shadows.rs"

[[example]]
name = "particles"
path = "particles.rs"

[[example]]
name = "full_demo"
path = "full_demo.rs"

[dependencies]
helio = { path = ".." }
blade-graphics = "0.4"
glam = "0.28"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
winit = "0.28"
raw-window-handle = "0.5"
