[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "render_v2_basic"
path = "render_v2_basic.rs"

[[bin]]
name = "render_v2_sky"
path = "render_v2_sky.rs"

[dependencies]
helio-render-v2 = { path = "../helio-render-v2" }
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = {git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8"}
pollster = "0.3"