[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "render_v2_basic"
path = "render_v2_basic.rs"

[[bin]]
name = "render_v2_sky"
path = "render_v2_sky.rs"

[[bin]]
name = "debug_shapes"
path = "debug_shapes.rs"

[[bin]]
name = "indoor_room"
path = "indoor_room.rs"

[[bin]]
name = "indoor_corridor"
path = "indoor_corridor.rs"

[[bin]]
name = "outdoor_night"
path = "outdoor_night.rs"

[[bin]]
name = "outdoor_canyon"
path = "outdoor_canyon.rs"

[[bin]]
name = "indoor_cathedral"
path = "indoor_cathedral.rs"

[[bin]]
name = "indoor_server_room"
path = "indoor_server_room.rs"

[[bin]]
name = "outdoor_city"
path = "outdoor_city.rs"

[[bin]]
name = "outdoor_volcano"
path = "outdoor_volcano.rs"

[[bin]]
name = "space_station"
path = "space_station.rs"

[[bin]]
name = "light_benchmark"
path = "light_benchmark.rs"

[[bin]]
name = "rc_benchmark"
path = "rc_benchmark.rs"


[dependencies]
helio-render-v2 = { path = "../helio-render-v2" }
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = {git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8"}
pollster = "0.3"