[package]
name = "feature_complete_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
helio-core = { path = "../helio-core" }
helio-render = { path = "../helio-render" }
helio-features = { path = "../helio-features" }
helio-feature-base-geometry = { path = "../helio-feature-base-geometry" }
helio-feature-lighting = { path = "../helio-feature-lighting" }
helio-feature-materials = { path = "../helio-feature-materials" }
helio-feature-procedural-shadows = { path = "../helio-feature-procedural-shadows" }
blade-graphics = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
android-activity = { version = "0.6", features = ["native-activity"] }
