[package]
name = "feature_complete_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
helio-core = { path = "../helio-core" }
helio-render = { path = "../helio-render" }
helio-features = { path = "../helio-features" }
helio-feature-base-geometry = { path = "../helio-feature-base-geometry" }
helio-feature-lighting = { path = "../helio-feature-lighting" }
helio-feature-materials = { path = "../helio-feature-materials" }
helio-feature-procedural-shadows = { path = "../helio-feature-procedural-shadows" }
blade-graphics = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
android-activity = { version = "0.6", features = ["native-activity"] }

[package.metadata.android]
package = "com.helio.feature_complete"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 30

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.signing.release]
path = "C:/Users/redst/.android/debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"
