[package]
name = "helio-asset-compat"
version = "0.1.0"
edition = "2021"
description = "SolidRS integration layer for Helio renderer - asset loading and conversion"

[dependencies]
# Helio renderer
helio-render-v2 = { path = "../helio-render-v2" }

# SolidRS - 3D asset loading
solid-rs.workspace = true
solid-gltf.workspace = true
solid-fbx.workspace = true
solid-obj.workspace = true
solid-usd.workspace = true

# Math and utilities
glam.workspace = true
log.workspace = true
thiserror = "1.0"

# GPU (same version as helio-render-v2)
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8" }
bytemuck = { version = "1.14", features = ["derive"] }

# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
