[package]
name = "helio-asset-compat"
version = "0.1.0"
edition = "2021"
description = "SolidRS integration layer for Helio renderer - asset loading and conversion"

[dependencies]
# Helio renderer facade
helio = { path = "../helio" }
libhelio = { path = "../libhelio" }

# SolidRS - 3D asset loading
solid-rs.workspace = true
solid-gltf.workspace = true
solid-fbx.workspace = true
solid-obj.workspace = true
solid-usd.workspace = true

# Math and utilities
glam.workspace = true
log.workspace = true
thiserror = "1.0"

# GPU
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }

# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
