[package]
name = "helio-core"
version = "0.1.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "GPU-driven rendering core with trait-based architecture"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
thiserror = { workspace = true }
libhelio = { workspace = true }
helio-voxel-core = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
# Matches the naga inside wgpu 30, so tests/wgsl_validation.rs validates shaders
# exactly as create_shader_module would at runtime.
naga = { version = "30.0.0", features = ["wgsl-in"] }

[features]
default = ["profiling"]
profiling = []
