[package]
name = "helio-culling"
version = "0.1.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "culling system for Helio rendering engine"
license = "MIT OR Apache-2.0"

[dependencies]
helio-core = { path = "../helio-core" }
blade-graphics = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
