[package]
name = "helio-feature-global-illumination"
version = "0.1.0"
edition = "2021"

[dependencies]
helio-features = { path = "../helio-features" }
helio-core = { path = "../helio-core" }
blade-graphics = { workspace = true }
blade-macros = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
