[package]
name = "helio-feature-procedural-shadows"
version = "0.1.0"
edition = "2021"

[dependencies]
helio-features = { path = "../helio-features" }
helio-core = { path = "../helio-core" }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
