[package]
name = "helio-material"
version = "0.1.0"
edition = "2021"

[dependencies]
helio-core = { path = "../helio-core" }
blade-graphics = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
bitflags = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
naga = { workspace = true }
