[package]
name = "helio-pass-decal"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: decal projection (bullet holes, cracks, stickers)"
license = "MIT OR Apache-2.0"

[dependencies]
helio-core = { workspace = true }
libhelio = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
