[package]
name = "helio-pass-depth-prepass"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-depth-prepass"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3  = { path = "../helio-v3" }
libhelio  = { path = "../libhelio" }
wgpu      = "23"
bytemuck  = { version = "1.14", features = ["derive"] }
