[package]
name = "helio-pass-occlusion-cull"
version = "0.1.0"
edition = "2021"

[dependencies]
helio-v3 = { path = "../helio-v3" }
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8", default-features = false, features = ["web", "webgpu", "wgsl"] }
bytemuck = { version = "1.14", features = ["derive"] }
