[package]
name = "helio-pass-radiance-cascades"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-radiance-cascades"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3  = { path = "../helio-v3" }
libhelio  = { path = "../libhelio" }
wgpu      = { workspace = true }
bytemuck  = { version = "1.14", features = ["derive"] }
