[package]
name = "helio-pass-shadow"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-shadow"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3  = { path = "../helio-v3" }
libhelio  = { path = "../libhelio" }
wgpu      = { workspace = true }
bytemuck  = { version = "1.14", features = ["derive"] }
log       = "0.4"
