[package]
name = "helio-pass-simple-cube"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: simple hardcoded cube (debug / reference graph)"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3 = { path = "../helio-v3" }
wgpu     = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
log      = "0.4"
