[package]
name = "helio-pass-ssao"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-ssao"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3  = { path = "../helio-v3" }
libhelio  = { path = "../libhelio" }
wgpu      = "23"
bytemuck  = { version = "1.14", features = ["derive"] }
