[package]
name = "helio-render-v2"
version = "0.1.1"
edition = "2021"

[dependencies]
wgpu = {git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8"}
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.4"
log = "0.4"
thiserror = "1.0"
petgraph = "0.6"

[dev-dependencies]
env_logger = "0.11"
winit = "0.30"

[build-dependencies]
walkdir = "2.4"
regex = "1.10"
