[package]
name = "helio-render-v2"
version = "0.1.11"
edition = "2021"

[dependencies]
# Regular rand dependency; we pull getrandom separately for wasm builds
rand = "0.8"

# wgpu is required by all platforms; default features are fine for native
# but wasm builds depend on the consuming crate to select the appropriate
# "web"/"webgpu" features.  We keep the same unconditionally so that
# native crates continue to work without changes.
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8" }

glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.4"
log = "0.4"
thiserror = "1.0"
petgraph = "0.6"
# pollster is used for synchronous GPU error scope pop on native targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

# The live portal is a heavy networking dependency used only by the native
# application for telemetry.  It drags in tokio/mio/hyper etc which are
# incompatible with the wasm32 target, so make it optional behind a feature.
helio-live-portal = { path = "../helio-live-portal", optional = true }

[dev-dependencies]
env_logger = "0.11"
winit = "0.30"

[features]
# enable the live portal by default so existing native code continues to
# work without any changes.  The wasm crate can disable default features
# when depending on helio-render-v2.
default = ["live-portal"]
live-portal = ["helio-live-portal"]

# on wasm we need the js backend for getrandom; rand doesn't re-export a
# feature for this so we pull getrandom directly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[build-dependencies]
walkdir = "2.4"
regex = "1.10"
