[package]
name = "helio-render-v3"
version = "0.1.0"
edition = "2021"
description = "Helio GPU-driven renderer — v3. GPU-resident scene, HISM batching, indirect draws, zero per-object CPU overhead at steady state."

[dependencies]
wgpu     = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8" }
glam     = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.4"
log      = "0.4"
thiserror = "1.0"
rand     = "0.8"
helio-live-portal = { path = "../helio-live-portal" }

[dev-dependencies]
env_logger = "0.11"
winit      = "0.30"
