[package]
name = "helio-render"
version = "0.1.0"
edition = "2021"

[dependencies]
helio-core = { path = "../helio-core" }
helio-features = { path = "../helio-features" }
helio-feature-procedural-shadows = { path = "../helio-feature-procedural-shadows", optional = true }
helio-feature-billboards = { path = "../helio-feature-billboards", optional = true }
blade-graphics = { workspace = true }
blade-macros = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
log = { workspace = true }

[features]
default = ["shadows", "billboards"]
shadows = ["helio-feature-procedural-shadows"]
billboards = ["helio-feature-billboards"]
